fixed react visibility

--- a/src/components/ReactPage/src/components/Employees/EmployeesContainer.css
+++ b/src/components/ReactPage/src/components/Employees/EmployeesContainer.css
@@ -1,6 +1,7 @@
 #eWrapper{
     display: flex;
     flex-direction: row !important;
+    background-color:gray;
 }
 
 #contentwrapper{
