--- a/src/components/ReactPage/src/components/NavBar.css
+++ b/src/components/ReactPage/src/components/NavBar.css
@@ -1,3 +1,3 @@
 .navbar {
-    background: royalblue;
+    background: #CB904D;
 }
