--- a/src/components/ReactPage/src/components/Overview/Content.css
+++ b/src/components/ReactPage/src/components/Overview/Content.css
@@ -2,6 +2,7 @@
     padding: 25px;
     display: flex;
     flex-direction: column !important;
+    background-color:gray;
 }
 
 #title{
