--- a/src/components/ReactPage/src/components/SideBar.css
+++ b/src/components/ReactPage/src/components/SideBar.css
@@ -1,3 +1,3 @@
 #sidebar{
-   background-color: #d6d4e0;
+   background-color: #dfcc74;
 }
